@@ -12,20 +12,20 @@ ELSE (NOT SMOKE_PATH)
 	MESSAGE (STATUS "Looking for SMOKE library - found - ${SMOKE_PATH}")
 ENDIF (NOT SMOKE_PATH)
 
-# find 'mcs'
-MESSAGE (STATUS "Looking for mcs")
-FIND_PROGRAM (MCS_PATH mcs)
-IF (NOT MCS_PATH)
-	MESSAGE (STATUS "Looking for mcs - not found")
-	MESSAGE (FATAL_ERROR "mcs was not found on your system")
-ELSE (NOT MCS_PATH)
-	MESSAGE (STATUS "Looking for mcs - found - ${MCS_PATH}")
-ENDIF (NOT MCS_PATH)
+# find 'gmcs'
+MESSAGE (STATUS "Looking for gmcs")
+FIND_PROGRAM (GMCS_PATH gmcs)
+IF (NOT GMCS_PATH)
+	MESSAGE (STATUS "Looking for gmcs - not found")
+	MESSAGE (FATAL_ERROR "gmcs was not found on your system")
+ELSE (NOT GMCS_PATH)
+	MESSAGE (STATUS "Looking for gmcs - found - ${GMCS_PATH}")
+ENDIF (NOT GMCS_PATH)
 
 INCLUDE_DIRECTORIES (${QT_INCLUDES})
 ADD_LIBRARY (qyoto SHARED qyoto.cpp handlers.cpp)
 TARGET_LINK_LIBRARIES (qyoto smokeqt ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
 
-ADD_CUSTOM_TARGET (qt-dotnet ALL ${MCS_PATH} -unsafe -warn:0 -out:qt-dotnet.dll -target:library SmokeInvocation.cs Qyoto.cs core/*.cs gui/*.cs network/*.cs sql/*.cs xml/*.cs svg/*.cs opengl/*.cs qdbus/*.cs)
+ADD_CUSTOM_TARGET (qt-dotnet ALL ${GMCS_PATH} -unsafe -warn:0 -out:qt-dotnet.dll -target:library SmokeInvocation.cs Qyoto.cs core/*.cs gui/*.cs network/*.cs sql/*.cs xml/*.cs svg/*.cs opengl/*.cs qdbus/*.cs)
 
 ADD_DEPENDENCIES (qt-dotnet qyoto)
