@@ -1,3 +1,8 @@
+2007-12-01  Richard Dale  <rdale@foton.es>
+
+	* Change the cmake build to use gmcs rather than mcs
+	* Added a QDBusReply class using a generic type
+
 2006-12-07  Richard Dale  <rdale@foton.es>
 
 	* Use QDate, QDateTime and QTime for dates and times, not the C#
